deploy/argocd/apicurio-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: apicurio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: apicurio
---
